--- a/data/ghost/themes/devblog/default.hbs
+++ b/data/ghost/themes/devblog/default.hbs
@@ -21,6 +21,7 @@
     <link rel="stylesheet" type="text/css" href="{{asset "css/screen.css"}}">
     <link rel="stylesheet" type="text/css" href="{{asset "css/prism-theme.css"}}">
     <link rel="stylesheet" type="text/css" href="{{asset "css/animations.css"}}">
+    <link rel="stylesheet" type="text/css" href="{{asset "css/magazine.css"}}">
     
     {{!-- Preconnect to font provider for better performance --}}
     <link rel="preconnect" href="https://fonts.googleapis.com">
