--- a/data/ghost/themes/devblog/partials/header.hbs
+++ b/data/ghost/themes/devblog/partials/header.hbs
@@ -1,5 +1,5 @@
 {{!-- Site Header --}}
-<header class="site-header" role="banner">
+<header class="site-header nav-{{@custom.navigation_layout}}" role="banner">
     <div class="header-wrapper">
         <div class="container">
             <div class="header-content">
