--- a/data/ghost/themes/devblog/default.hbs
+++ b/data/ghost/themes/devblog/default.hbs
@@ -68,7 +68,7 @@
     {{ghost_head}}
 </head>
 
-<body class="{{body_class}}">
+<body class="{{body_class}} title-{{@custom.title_font}} body-{{@custom.body_font}}">
     {{!-- Skip to content link for accessibility --}}
     <a href="#main-content" class="skip-link">Skip to content</a>
     
