--- a/data/ghost/themes/devblog/home.hbs
+++ b/data/ghost/themes/devblog/home.hbs
@@ -8,6 +8,13 @@ Description: Custom landing page with hero, featured posts, and latest content
 <section class="hero">
     <div class="hero__container">
         <div class="hero__content">
+            {{#if @custom.show_publication_cover}}
+                {{#if @site.cover_image}}
+                    <div class="hero__cover">
+                        <img src="{{@site.cover_image}}" alt="{{@site.title}}" loading="eager">
+                    </div>
+                {{/if}}
+            {{/if}}
             <div class="hero__badge">
                 <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
                     <path d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z"/>
